--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
             </p>
             <div class="container">
-                <div class="row">
+                <div class="row gy-5">
                     <div class="col-md-8">
-                        <img src="img/how-we-got-started-1920.jpg" alt="how we got started" class="img-fluid mb-5">
+                        <img src="img/how-we-got-started-1920.jpg" alt="how we got started" class="img-fluid">
                     </div>
                     <div class="col col-md-4 text-start">
                         <h3>
@@ -119,7 +119,7 @@
             <div class="container">
                 <div class="row g-4">
                     <div class="col-md-4">
-                        <div class="mb-4"><img src="img/john-doe-300.jpg" alt="john doe" class="rounded-circle img-fluid"></div>
+                        <img src="img/john-doe-300.jpg" alt="john doe" class="rounded-circle img-fluid mb-4">
                         <h3>John Doe</h3>
                         <h4 class="text-secondary">Web Developer</h4>
                         <p>
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="mb-4"><img src="img/bob-smith-300.jpg" alt="bob smith" class="rounded-circle img-fluid"></div>
+                        <img src="img/bob-smith-300.jpg" alt="bob smith" class="rounded-circle img-fluid mb-4">
                         <h3>Bob Smith</h3>
                         <h4 class="text-secondary">Web Designer</h4>
                         <p>
@@ -141,7 +141,7 @@
                     </div>
         
                     <div class="col-md-4">
-                        <div class="mb-4"><img src="img/jane-brown-300.jpg" alt="jane brown" class="rounded-circle img-fluid"></div>
+                        <img src="img/jane-brown-300.jpg" alt="jane brown" class="rounded-circle img-fluid mb-4">
                         <h3>Jane Brown</h3>
                         <h4 class="text-secondary">Photographer</h4>
                         <p>
