--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="row gy-5">
                     <div class="col-md-8">
-                        <img src="img/how-we-got-started-1920.jpg" alt="how we got started" class="img-fluid">
+                        <img src="img/how-we-got-started.jpg" alt="people in a bar" class="img-fluid">
                     </div>
                     <div class="col col-md-4 text-start">
                         <h3>
